plugins {
    id 'war'
    id 'maven'
    id 'maven-publish'
    id 'checkstyle'
}

repositories {
    mavenCentral()
    mavenLocal()
}

apply from: '../opencadc.gradle'

sourceCompatibility = 1.8

group = 'org.opencadc'

war {
    from(System.getenv('RPS') + '/resources/') {
        include 'swagger-ui/'
    }
}

dependencies {
    compile 'org.opencadc:cadc-util:[1.6,2.0)'
    compile 'org.opencadc:cadc-log:[1.0,)'
    compile 'org.opencadc:cadc-registry:[1.5.6,)'
    compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
    compile 'org.opencadc:cadc-rest:[1.3.6,)'
    compile 'org.opencadc:cadc-cdp:[1.0,)'
    compile 'org.opencadc:cadc-gms:[1.0.0,)'
    compile 'org.opencadc:cadc-inventory:[0.9,2.0)'
    compile 'org.opencadc:cadc-inventory-db:[0.14,1.0)'
    compile 'org.opencadc:cadc-inventory-server:[0.1.2,)'
    compile 'org.opencadc:cadc-permissions:[0.3.1,)'
    compile 'org.opencadc:cadc-vos:[1.2,)'

    runtime 'org.opencadc:cadc-access-control:[1.1.1,2.0)'
    runtime 'org.opencadc:cadc-access-control-identity:[1.0.3,2.0)'

    testCompile 'junit:junit:[4.0,)'

    intTestCompile 'org.opencadc:cadc-test-vosi:[1.0.11,)'
    intTestRuntime 'org.postgresql:postgresql:[42.2.8,)'
}



